12/7/2012 Odoth
-Added CHANGELOG.
12/12/2012 oDOTH
-Remove handle_web call in comm.c
12/20/2012 Odoth
-Linkdead players swept from box rooms.
-Change "testo" back to "aeaea" in comm.c for copyover.
-Fix so container "capacity" (v3) actually prevents too many
 items in a container.
-Boxes weren't deducting qp, now they are.
- Fixed bug where quitting in box room cleans out a char's eq
  and inventory.
- Added logging for all items put in and taken out of boxes,
  includes character name and item short descr and vnum.
- Fixed bug allowing some bags to be put in other bags.
- Static bufs, return bufs instread of str_dup in get_mimic_PERS_new.
- Removed "remove_from_quit_list" when logging in, causes issues with box saving. (VODUR)
- Various other box/saving cleanup while tracking down the bug.
- Contents of containers put in storage boxes are logged.
- Revamped box saving slightly so that instead of tracking it "storage_box" pointer attached to the player memfile, just keep a separate list of storage_box mfs. When player is saved, their boxes (if any) are saved and put on the list, when char is being written to file, their box (if found on list) is written then both mfs are removed from list and freed.
- Added 'printlist' command for lvl 110 which tracks status of mf lists (player_save_list, box_mf_list, player_quit_list).
- Check for storage box in char_from_room put inside if(!IS_NPC) bracket to avoid crashes in case a mob sneaks in somehow.
- container full message when using put all.